codex-rs/core/tests/suite/snapshots/all__suite__scenarios__incremental_tools_resume__legacy_resume_remote_compaction.snap
---
source: core/tests/suite/scenarios_incremental_tools_resume.rs
expression: "context_snapshot::format_request_history_snapshot(\"A resumed legacy window retains its generated prefix; the next window records tools and instructions once, then emits only tool changes after resume.\",\n&requests,\n&ContextSnapshotOptions::default().rewrite_known_segments().include_request_settings(),)"
---
Scenario: A resumed legacy window retains its generated prefix; the next window records tools and instructions once, then emits only tool changes after resume.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-5.4"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (2; hash=dcb4fe5940649228):
        - namespace/functions; hash=96d70e99d3cc3052
          - custom/exec
          - function/wait
          - function/exec_command
          - function/write_stdin
          - custom/apply_patch
          - function/view_image
        - tool_search: BM25 search of deferred tool metadata; matches callable on next model call  Enabled sources: - Mu...; args=[limit, query]; hash=27790a3934f25ed5
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    Begin with the legacy tool prefix.
-- request 2 (turn) --
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    Resume without moving the tool prefix.
-- request 3 (compaction) --
07:compaction_trigger

## Window 2 (after request 3: input diverged at item 02)
Settings: same as window 1
-- request 4 (turn) --
00:additional_tools/developer (2; hash=dcb4fe5940649228):
        - namespace/functions; hash=96d70e99d3cc3052
          - custom/exec
          - function/wait
          - function/exec_command
          - function/write_stdin
          - custom/apply_patch
          - function/view_image
        - tool_search: BM25 search of deferred tool metadata; matches callable on next model call  Enabled sources: - Mu...; args=[limit, query]; hash=27790a3934f25ed5
01:message/developer:
    <MODEL_INSTRUCTIONS>
02:message/user:
    Begin with the legacy tool prefix.
03:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user:
    Resume without moving the tool prefix.
06:compaction:encrypted=true; chars=17; hash=6c10f5e81c1f8e16
07:message/user:
    Continue in the new window with incremental tools.
-- request 5 (turn) --
08:message/user:
    <ENVIRONMENT_CONTEXT>
09:message/user:
    Resume with the new window unchanged.
-- request 6 (turn) --
10:additional_tools/developer (1; hash=a9f3c7013eaad458):
        - namespace/functions: This is an incremental namespace update. Previously declared tools remain available for direct ca...; hash=9cca4c23ad27b702
          - function/update_plan
11:message/developer:
    The following tools are no longer available. Do not call them:
    - functions.exec_command
    - functions.write_stdin
12:message/user:
    <ENVIRONMENT_CONTEXT>
13:message/user:
    Enable planning and remove shell tools after migration.
-- request 7 (turn) --
14:message/user:
    Continue with the same tools.
